@@ -30,6 +30,7 @@ public class RAMDualPort extends Node implements Element, RAMInterface {
             .addAttribute(Keys.ROTATE)
             .addAttribute(Keys.BITS)
             .addAttribute(Keys.ADDR_BITS)
+            .addAttribute(Keys.IS_PROGRAM_MEMORY)
             .addAttribute(Keys.LABEL);
 
     private final DataField memory;
@@ -38,6 +39,7 @@ public class RAMDualPort extends Node implements Element, RAMInterface {
     private final int bits;
     private final String label;
     private final int size;
+    private final boolean isProgramMemory;
     private ObservableValue addrIn;
     private ObservableValue dataIn;
     private ObservableValue strIn;
@@ -60,6 +62,7 @@ public class RAMDualPort extends Node implements Element, RAMInterface {
         size = 1 << addrBits;
         memory = new DataField(size);
         label = attr.getCleanLabel();
+        isProgramMemory = attr.get(Keys.IS_PROGRAM_MEMORY);
     }
 
     /**
@@ -190,5 +193,15 @@ public class RAMDualPort extends Node implements Element, RAMInterface {
     @Override
     public int getAddrBits() {
         return addrBits;
+    }
+
+    @Override
+    public boolean isProgramMemory() {
+        return isProgramMemory;
+    }
+
+    @Override
+    public void setProgramMemory(DataField dataField) {
+        memory.setDataFrom(dataField);
     }
 }
