@@ -31,6 +31,7 @@ public class RAMSinglePort extends RAMDualPort {
             .addAttribute(Keys.ROTATE)
             .addAttribute(Keys.BITS)
             .addAttribute(Keys.ADDR_BITS)
+            .addAttribute(Keys.IS_PROGRAM_MEMORY)
             .addAttribute(Keys.LABEL);
 
     /**
