@@ -3,6 +3,8 @@ Release Notes
 HEAD, planned as v0.20
 - Improved zooming and navigating in the measurement graph.
 - Added multi pole double-throw relays.
+- The external assembly IDE is able to preload also RAMs with executable code.
+  The register representing the program counter must be marked as such.
 
 v0.19, released on 14. June 2018
 - Added a tabbed pane to the attributes dialog to make it more beginner friendly.
